Cant rename local NLA tracks within a local library override data-block. #98686

Closed
opened 2022-06-08 19:44:04 +02:00 by Christian · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (newest version of Blender that worked as expected)

Short description of error
Cant rename a NLA track with linked objects

Exact steps for others to reproduce the error

  • Save a .blender file with a cube
  • Open another blender instance and link that cube to the new blender.
  • Make a library override of the linked cube.
  • Insert a key to the Cube (Eg. {nav Insert Keyframe Menu > Location})
  • On the NLA editor, expand the action
  • Try rename the track NLATrack
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (newest version of Blender that worked as expected) **Short description of error** Cant rename a NLA track with linked objects **Exact steps for others to reproduce the error** - Save a .blender file with a cube - Open another blender instance and link that cube to the new blender. - Make a library override of the linked cube. - Insert a key to the Cube (Eg. {nav Insert Keyframe Menu > Location}) - On the NLA editor, expand the action - Try rename the track `NLATrack`
Author

Added subscriber: @paidex

Added subscriber: @paidex

#100114 was marked as duplicate of this issue

#100114 was marked as duplicate of this issue
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
Contributor

You shouldn't be able to add/edit NLA strips on linked datablocks to begin with. You can see how all properties of the newly added strip are also readonly, and when saving and reloading the file, the strip disappears.

However, according to #72629, adding a library override to the object allows you to create new tracks and strips within those tracks. And while that does work, newly added tracks can not be renamed either.

You shouldn't be able to add/edit NLA strips on linked datablocks to begin with. You can see how all properties of the newly added strip are also readonly, and when saving and reloading the file, the strip disappears. However, according to #72629, adding a library override to the object allows you to create new tracks and strips within those tracks. And while that does work, newly added tracks can not be renamed either.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This limitation was added in 6770f76bd4.
Apparently the intention was to prevent renaming linked Actions.
But in the case reported here, the channel is not linked, only the object in which the Action was added to which is.

So it's actually a bug imho.

This limitation was added in 6770f76bd4. Apparently the intention was to prevent renaming linked Actions. But in the case reported here, the channel is not linked, only the object in which the Action was added to which is. So it's actually a bug imho.
Member

Added subscriber: @BClark

Added subscriber: @BClark

Added subscriber: @mont29

Added subscriber: @mont29

The main problem here is that you can insert keyframes on a linked object. In fact, lots of animation editing operators seem to not do any check whether their action or owner ID is editable or not. This is not allowed (linked data is not editable, even less animatable), will report that separately. But not being able to rename a NLA track on a linked object is perfectly normal.

Will edit this report to only track the 'not being able to rename local NLA tracks in a library override data-block'.

The main problem here is that you can insert keyframes on a linked object. In fact, lots of animation editing operators seem to not do any check whether their action or owner ID is editable or not. This is not allowed (linked data is not editable, even less animatable), will report that separately. But not being able to rename a NLA track on a linked object is perfectly normal. Will edit this report to only track the 'not being able to rename local NLA tracks in a library override data-block'.
Bastien Montagne changed title from Cant rename a NLA track with linked objects to Cant rename local NLA tracks within a local library override data-block. 2022-06-09 09:04:32 +02:00

This issue was referenced by a91c8d8efa

This issue was referenced by a91c8d8efa414ddb775e0c2fb03a7cc034ec1c58

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-06-09 09:51:57 +02:00
Member

Added subscriber: @viadvena

Added subscriber: @viadvena
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98686
No description provided.