Fix T98686: Cant rename local NLA tracks within a local library override data-block.

We need a specific exception to general rule 'no rename of anim channels
in liboverride data' for the locally-inserted NLA tracks.